# open_manipulator_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: ros-ci.yml
msg/: OpenManipulatorState.msg
srv/: GetJointPosition.srv  GetKinematicsPose.srv  SetActuatorState.srv  SetDrawingTrajectory.srv  SetJointPosition.srv  SetKinematicsPose.srv  SetTorqueState.srv
