<?xml version="1.0"?>
<package format="3">
  <name>open_manipulator_msgs</name>
  <version>1.0.0</version>
  <description>
    Messages and services package for OpenManipulator to send information about state or pose
  </description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_msgs/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
