<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_msgs</name>
  <version>2.2.0</version>
  <description>
    ROS 2 package for open_manipulator_msgs.
  </description>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/open_manipulator_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_msgs/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
